tests/negative/abilities/print_no_io.orng
// print_no_io.orng:6:11: error: missing ability`Writing`
//     @print("Hello, World!")
//          ^
// 
fn main() -> ()!() {
    @print("Hello, World!")
}